mychatappv4/src/main/java/com/example/mychatappv4/errors/PasswordMismatchException.java
package com.example.mychatappv4.errors;

public class PasswordMismatchException extends RuntimeException {
    public PasswordMismatchException(String message) {
        super(message);
    }
}
